# app/routes/PetRoute.ts
@@ -1,9 +1,11 @@
-import wiring from './../wiring';
+import wiring from '../wiring';
 
 export class Routes {
     public routes(app: any): void {
         app.get('/pets', wiring.petController().getAllPets);
         app.get('/pets/ById/:petId', wiring.petController().getPetById);
+        app.post('/pets', wiring.petController().createPet);
+        app.delete('/pets/:petId', wiring.petController().deletePet);
     }
 }
 export default Routes;
