# app/swagger.json
@@ -54,6 +54,42 @@
                         "description": "Pets not found"
                     }
                 }
+            },
+            "post": {
+                "tags": [
+                    "pets"
+                ],
+                "summary": "Post a pet details",
+                "description": "Save the new pet",
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                    "name": "pet",
+                    "in": "body",
+                    "description": "Pet details to be saved",
+                    "required": true
+                    }
+                ],
+                "responses":{
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Pet"
+                            }
+                        }
+                    },
+                    "400":{
+                        "description": "Invalid input"
+                    },
+                    "404": {
+                        "description": "Pet not found"
+                    }
+                }
             }
         },
         "/pets/ById/{petId}": {
@@ -86,7 +122,46 @@
                             }
                         }
                     },
-                    "405":{
+                    "400":{
+                        "description": "Invalid input"
+                    },
+                    "404": {
+                        "description": "Pet not found"
+                    }
+                }
+            }
+        },
+        "/pets/{petId}":  {
+            "delete": {
+                "tags":[
+                    "pets"
+                ],
+                "summary": "Delete pet by ID",
+                "description": "Deletes a single pet",
+                "produces": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "parameters": [
+                    {
+                    "name": "petId",
+                    "in": "path",
+                    "description": "ID of pet to delete",
+                    "required": true,
+                    "type": "string"
+                    }
+                ],
+                "responses":{
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/Pet"
+                            }
+                        }
+                    },
+                    "400":{
                         "description": "Invalid input"
                     },
                     "404": {
